fixed CreatingEpsilonFreePart